# long-term-order

./: .gitignore  README.md  pm2.json  pyproject.toml  ruff.toml  run.py  test.py
bot/: config.py  constants.py  logging.py  main.py  shioaji.py  types.py  ui.py  utils.py
bot/cogs/: cog.py  place_order.py
bot/db/: session.py
bot/db/models/: base.py  order.py
bot/ui/: main.py  order.py  trade.py
